@@ -1,5 +1,8 @@
 $eterna: CHANGES,v 1.78 2011/11/18 01:25:11 mrg Exp $
 
+changes in bozohttpd 20160517:
+	o add a bozo_get_version() function which returns the version number
+
 changes in bozohttpd 20160415:
 	o  add search-word support for CGI
 	o  fix a security issue in CGI suffix handler support which would
